--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
     <!-- Navigation -->
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="login.html">Login</a>
-        <a href="menu_view.html">Menu</a>
-        <a href="customize_order.html">Customize Order</a>
-        <a href="order_summary.html">Order Summary</a>
+        <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="customize_order.html">Customize Order</a></li>
+            <li><a href="menu_view.html">Menu</a></li>
+            <li><a href="order_summary.html">Order Summary</a></li>
+        </ol>
     </div>
 
     <!-- Main Content -->
