--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+<!-- Benjamin Anderson 30244596-->
+<!-- Asim Hamdan 30207349-->
+
+ 
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Ben & Asim's</title>
+        <title>Sweet Scoops Ice Cream Shop</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="styles.css">
@@ -12,7 +16,7 @@
     <!-- Header -->
     <header>
         <img src="logo.jpeg" alt="Ice Cream Logo">
-        <h1>Ben & Asim's</h1>
+        <h1>Sweet Scoops Ice Cream Shop</h1>
     </header>
 
     <!-- Navigation -->
@@ -26,7 +30,7 @@
             <a href="customize_order.html">Customize Order</a>
            <span>|</span>
             
-            <a href="menu_view.html">Menu</a>
+            <a href="menu_view.html">Menu View</a>
            <span>|</span>
             
             <a href="order_summary.html">Order Summary</a>
@@ -58,7 +62,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2026 Ben & Asim's. All Rights Reserved.</p>
+        <p>&copy; 2026 Sweet Scoop Ice Cream </p>
     </footer>
 
 </body>
