--- a/menu_view.html
+++ b/menu_view.html
@@ -38,7 +38,7 @@
   <main class="main-container">
       <!-- Season/Promotion Dropdown -->
       <section style="width:1050px; text-align: center;">
-        <h3>Current Season</h3>
+        <h3>Current Season:</h3>
         <div class="season-dropdown-container">
               <select id="season-select" name="season-select" aria-label="Select Season or Promotion">
                   <option value="spring">Spring</option>
@@ -66,7 +66,7 @@
 
         <div class="tile">
             <h3>Chocolate Fudge Swirl</h3>
-             <p class="category"><strong>Categroy:</strong> Signature</p>
+             <p class="category"><strong>Category:</strong> Signature</p>
           <img src="Picture1.webp" alt="Chocolate Bliss Ice Cream" />
           <p>Dark chocolate base with ribbons of silky fudge.</p>
           <p>$4.49 - $7.49</p>
@@ -148,7 +148,7 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2026 Sweet Scoops Ice Cream Shop
+    <p>&copy; 2026 Sweet Scoop Ice Cream. All rights reserved.</p>
   </footer>
 
 </body>
