--- a/menu_view.html
+++ b/menu_view.html
@@ -110,7 +110,7 @@
     <!-- Seasonal Specials Section -->
     <section style="width:1050px">
         <h2 >Seasonal Specials</h2>
-      <div class="tiles-container">
+      <div class="tiles-container", style="text-align: center;">
 
         <div class="special-tile">
             <h3>Peppermint Snow</h3>
